# ascii-water

./: CMakeLists.txt  README.md
include/: wave2d.hpp
src/: main.cpp  wave3d.cpp
